--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.css">
     <title>Primeros pasos en Git y Git-hub</title>
 </head>
 <body>
 
     <h1>Git y Git-hub</h1>
-    <p>Mis primeros pasos en el versionado de codigo.</p>
+    <p>Mis primeros pasos en el versionado de codigo desde la rama principal.</p>
+
+    <ul>
+        <li>Element 1</li>
+        <li>Element 2</li>
+        <li>Element 3</li>
+        <li>Element 4</li>
+        <li>Element 5</li>
+    </ul>
     
 </body>
 </html>
