Agregando las estaciones del año

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     </ul>
 
     <p>Cmabio efectuado</p>
+
+    <ol>
+        <li>Otoño</li>
+        <li>Invierno</li>
+        <li>Primavera</li>
+        <li>Verano</li>
+    </ol>
     
 </body>
 <script src="script.js"></script>
