--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     </ul>
 
     <p>Cmabio efectuado</p>
+
+    <ol>
+        <li>Otoño - 21 de Marzo</li>
+        <li>Invierno - 21 de Junio</li>
+        <li>Primavera - 21 de Septiembre</li>
+        <li>Verano - 21 de diciembre</li>
+    </ol>
     
 </body>
 <script src="script.js"></script>
